[package]
name = "iter-solver"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "A rust crate provide flexible and general iterative algorithm framework." 
repository = "https://github.com/Y-S-Xing/iter-solver"
keywords = ["solver", "iteration", "algorithm", "numerical", "optimization"]

[dependencies]
thiserror = "2"