[package]
name = "iter_state_derive"
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Y-S-Xing/iter-solver"
description = "A derive macro for iter-solver crate."

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
